@@ -1,3 +1,4 @@
+* Allow to perform unaccented searches on Char fields
 * Always raise exception in table handler
 * Simplify API for Session: new, remove, check and reset
 * Ensure that all buttons are registered in ir.model.button
